--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/../../../../../:\Dev_JavaWin\_probe\bla\.idea/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+
+
+
+### Zotja
 /lib/
 /out/
 .idea/
